[workspace]
resolver = "2"
members = [
    "crates/*",
]
exclude = [
    "crates/web",
]

[workspace.dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.80"
thiserror = "1.0"
rand = "0.8.5"
async-trait = "0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.6"
hex = "0.4.3"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
sha2 = "0.10"
blake3 = "1.5"
libp2p = { version = "0.53", features = ["tokio", "gossipsub", "noise", "yamux"] }
libp2p-swarm-derive = "0.25"
async-openai = "0.18.3"
ethers = { version = "2.0", features = ["ws", "rustls"] }
axum = { version = "0.7.9", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5.1", features = ["fs", "cors"] }
clap = { version = "4.5.1", features = ["derive"] }
directories = "5.0"
dotenv = "0.15.0"
chrono = "0.4.34"
chaoschain-core = { path = "crates/core" }
chaoschain-state = { path = "crates/state" }
chaoschain-consensus = { path = "crates/consensus" }
chaoschain-p2p = { path = "crates/p2p" }
chaoschain-producer = { path = "crates/producer" }
chaoschain-mempool = { path = "crates/mempool" }
chaoschain-bridge = { path = "crates/bridge" }
chaoschain-cli = { path = "crates/cli" }
chaoschain-crypto = { path = "crates/crypto" }
