[package]
name = "chaoschain-cli"
version = "0.1.0"
edition = "2021"
authors = ["ChaosChain Contributors"]

[dependencies]
# Internal dependencies
chaoschain-core.workspace = true
chaoschain-state.workspace = true
chaoschain-consensus.workspace = true
chaoschain-p2p.workspace = true
chaoschain-producer.workspace = true
chaoschain-bridge.workspace = true

# CLI
clap.workspace = true
directories.workspace = true
dotenv.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true 
